--- a/admin_index.html
+++ b/admin_index.html
@@ -41,6 +41,7 @@
     <div>
         <!-- navbar -->
         <!-- 使用Boostrap Navbar -->
+        <!-- navbar-expand-md在768px以下就出現漢堡式選單 -->
         <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
             <!-- 導覽列左上角的文字 -->
             <a class="navbar-brand" href="#">
