--- a/admin_login.html
+++ b/admin_login.html
@@ -31,9 +31,9 @@
         integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
         crossorigin="anonymous"></script>
     <!-- CSS檔 -->
-    <link rel="stylesheet" href="./css/admin_index.css">
+    <link rel="stylesheet" href="./css/admin_login.css">
     <!-- JS檔 -->
-    <script src="./js/admin_index.js"></script>
+    <script src="./js/admin_login.js"></script>
     <title>後台管理登入</title>
 </head>
 
