--- a/admin_orderSearch.html
+++ b/admin_orderSearch.html
@@ -157,154 +157,149 @@
                     <!-- 查詢結果 -->
                     <div>
                         <div class="form-inline mt-3">
-                            <div class="dropdown col-md-8">
-                                <button class="btn btn-light dropdown-toggle" type="button" id="dropdownMenuButton"
-                                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    排序方式
-                                </button>
-                                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                                    <a class="dropdown-item" href="#">訂單編號遞增</a>
-                                    <a class="dropdown-item" href="#">訂單編號遞減</a>
-                                    <a class="dropdown-item" href="#">訂單金額遞增</a>
-                                    <a class="dropdown-item" href="#">訂單金額遞減</a>
-                                </div>
+                            <div class="col-md-8">
+                                <select class="form-control">
+                                    <option disabled selected hidden>排序方式</option>
+                                    <option>訂單編號遞增</option>
+                                    <option>訂單編號遞減</option>
+                                    <option>訂單金額遞增</option>
+                                    <option>訂單金額遞減</option>
+                                </select>
                             </div>
                             <div class="col-md-4">
                                 <span>一頁顯示</span>
                                 <div class="dropdown" id="viewNum">
-                                    <button class="btn btn-light dropdown-toggle" type="button" id="dropdownMenuButton"
-                                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                        10筆
-                                    </button>
-                                    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                                        <a class="dropdown-item" href="#">50筆</a>
-                                        <a class="dropdown-item" href="#">100筆</a>
-                                        <a class="dropdown-item" href="#">150筆</a>
-                                    </div>
-                                    <a href="#">下一頁</a>
-                                    <a href="#">最後一頁</a>
+                                    <select class="form-control p-2">
+                                        <option selected>10筆</option>
+                                        <option>50筆</option>
+                                        <option>100筆</option>
+                                        <option>150筆</option>
+                                    </select>
                                 </div>
+                                <a href="#">下一頁</a>
+                                <a href="#">最後一頁</a>
                             </div>
                         </div>
-                        <!-- TODO:DB查詢顯示表格 -->
-                        <div class="table-responsive-md mt-3">
-                            <table class="table table-hover table-bordered">
-                                <thead>
-                                    <tr>
-                                        <th scope="col">序號</th>
-                                        <th scope="col">訂單編號</th>
-                                        <th scope="col">訂單狀態</th>
-                                        <th scope="col">訂購人</th>
-                                        <th scope="col">商家名稱</th>
-                                        <th scope="col">外送員</th>
-                                        <th scope="col">金額</th>
-                                        <th scope="col">明細</th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    <tr>
-                                        <th scope="row">1</th>
-                                        <td>O00001</td>
-                                        <td>完成</td>
-                                        <td>李燦雯</td>
-                                        <td>麥當勞</td>
-                                        <td>陳邦月</td>
-                                        <td>298</td>
-                                        <td><a href="#"><i class="far fa-list-alt"></i></a></td>
-                                    </tr>
-                                    <tr>
-                                        <th scope="row">2</th>
-                                        <td>O00002</td>
-                                        <td>外送中</td>
-                                        <td>葉佩芸</td>
-                                        <td>摩斯</td>
-                                        <td>廖智鈞</td>
-                                        <td>350</td>
-                                        <td><a href="#"><i class="far fa-list-alt"></i></a></td>
-                                    </tr>
-                                    <tr>
-                                        <th scope="row">3</th>
-                                        <td>O00003</td>
-                                        <td>已通知取餐</td>
-                                        <td>王聖文</td>
-                                        <td>肯德基</td>
-                                        <td>陳木福</td>
-                                        <td>199</td>
-                                        <td><a href="#"><i class="far fa-list-alt"></i></a></td>
-                                    </tr>
-                                    <tr>
-                                        <th scope="row">4</th>
-                                        <td>O00004</td>
-                                        <td>商家接單</td>
-                                        <td>白怡芬</td>
-                                        <td>漢堡王</td>
-                                        <td>吳靜琦</td>
-                                        <td>115</td>
-                                        <td><a href="#"><i class="far fa-list-alt"></i></a></td>
-                                    </tr>
-                                    <tr>
-                                        <th scope="row">5</th>
-                                        <td>O00005</td>
-                                        <td>已通知取餐</td>
-                                        <td>周敬真</td>
-                                        <td>21世紀</td>
-                                        <td>林韋龍</td>
-                                        <td>409</td>
-                                        <td><a href="#"><i class="far fa-list-alt"></i></a></td>
-                                    </tr>
-                                    <tr>
-                                        <th scope="row">6</th>
-                                        <td>O00006</td>
-                                        <td>完成</td>
-                                        <td>汪佳瑩</td>
-                                        <td>胖老爹</td>
-                                        <td>劉紫良</td>
-                                        <td>598</td>
-                                        <td><a href="#"><i class="far fa-list-alt"></i></a></td>
-                                    </tr>
-                                    <tr>
-                                        <th scope="row">7</th>
-                                        <td>O00007</td>
-                                        <td>外送中</td>
-                                        <td>陳旻恩</td>
-                                        <td>五十嵐</td>
-                                        <td>吳美仁</td>
-                                        <td>80</td>
-                                        <td><a href="#"><i class="far fa-list-alt"></i></a></td>
-                                    </tr>
-                                    <tr>
-                                        <th scope="row">8</th>
-                                        <td>O00008</td>
-                                        <td>商家接單</td>
-                                        <td>葉怡剛</td>
-                                        <td>起家雞</td>
-                                        <td>張佳蘋</td>
-                                        <td>429</td>
-                                        <td><a href="#"><i class="far fa-list-alt"></i></a></td>
-                                    </tr>
-                                    <tr>
-                                        <th scope="row">9</th>
-                                        <td>O00009</td>
-                                        <td>外送中</td>
-                                        <td>楊志明</td>
-                                        <td>吉野家</td>
-                                        <td>林山凌</td>
-                                        <td>159</td>
-                                        <td><a href="#"><i class="far fa-list-alt"></i></a></td>
-                                    </tr>
-                                    <tr>
-                                        <th scope="row">10</th>
-                                        <td>O00010</td>
-                                        <td>消費者送出訂單</td>
-                                        <td>夏康欣</td>
-                                        <td>鬍鬚張</td>
-                                        <td>陳淑君</td>
-                                        <td>220</td>
-                                        <td><a href="#"><i class="far fa-list-alt"></i></a></td>
-                                    </tr>
-                                </tbody>
-                            </table>
-                        </div>
+                    </div>
+                    <!-- TODO:DB查詢顯示表格 -->
+                    <div class="table-responsive-md mt-3">
+                        <table class="table table-hover table-bordered">
+                            <thead>
+                                <tr>
+                                    <th scope="col">序號</th>
+                                    <th scope="col">訂單編號</th>
+                                    <th scope="col">訂單狀態</th>
+                                    <th scope="col">訂購人</th>
+                                    <th scope="col">商家名稱</th>
+                                    <th scope="col">外送員</th>
+                                    <th scope="col">金額</th>
+                                    <th scope="col">明細</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <th scope="row">1</th>
+                                    <td>O00001</td>
+                                    <td>完成</td>
+                                    <td>李燦雯</td>
+                                    <td>麥當勞</td>
+                                    <td>陳邦月</td>
+                                    <td>298</td>
+                                    <td><a href="#"><i class="far fa-list-alt"></i></a></td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">2</th>
+                                    <td>O00002</td>
+                                    <td>外送中</td>
+                                    <td>葉佩芸</td>
+                                    <td>摩斯</td>
+                                    <td>廖智鈞</td>
+                                    <td>350</td>
+                                    <td><a href="#"><i class="far fa-list-alt"></i></a></td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">3</th>
+                                    <td>O00003</td>
+                                    <td>已通知取餐</td>
+                                    <td>王聖文</td>
+                                    <td>肯德基</td>
+                                    <td>陳木福</td>
+                                    <td>199</td>
+                                    <td><a href="#"><i class="far fa-list-alt"></i></a></td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">4</th>
+                                    <td>O00004</td>
+                                    <td>商家接單</td>
+                                    <td>白怡芬</td>
+                                    <td>漢堡王</td>
+                                    <td>吳靜琦</td>
+                                    <td>115</td>
+                                    <td><a href="#"><i class="far fa-list-alt"></i></a></td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">5</th>
+                                    <td>O00005</td>
+                                    <td>已通知取餐</td>
+                                    <td>周敬真</td>
+                                    <td>21世紀</td>
+                                    <td>林韋龍</td>
+                                    <td>409</td>
+                                    <td><a href="#"><i class="far fa-list-alt"></i></a></td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">6</th>
+                                    <td>O00006</td>
+                                    <td>完成</td>
+                                    <td>汪佳瑩</td>
+                                    <td>胖老爹</td>
+                                    <td>劉紫良</td>
+                                    <td>598</td>
+                                    <td><a href="#"><i class="far fa-list-alt"></i></a></td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">7</th>
+                                    <td>O00007</td>
+                                    <td>外送中</td>
+                                    <td>陳旻恩</td>
+                                    <td>五十嵐</td>
+                                    <td>吳美仁</td>
+                                    <td>80</td>
+                                    <td><a href="#"><i class="far fa-list-alt"></i></a></td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">8</th>
+                                    <td>O00008</td>
+                                    <td>商家接單</td>
+                                    <td>葉怡剛</td>
+                                    <td>起家雞</td>
+                                    <td>張佳蘋</td>
+                                    <td>429</td>
+                                    <td><a href="#"><i class="far fa-list-alt"></i></a></td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">9</th>
+                                    <td>O00009</td>
+                                    <td>外送中</td>
+                                    <td>楊志明</td>
+                                    <td>吉野家</td>
+                                    <td>林山凌</td>
+                                    <td>159</td>
+                                    <td><a href="#"><i class="far fa-list-alt"></i></a></td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">10</th>
+                                    <td>O00010</td>
+                                    <td>消費者送出訂單</td>
+                                    <td>夏康欣</td>
+                                    <td>鬍鬚張</td>
+                                    <td>陳淑君</td>
+                                    <td>220</td>
+                                    <td><a href="#"><i class="far fa-list-alt"></i></a></td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
                 </main>
             </div>
         </section>
