--- a/admin_orderSearch.html
+++ b/admin_orderSearch.html
@@ -74,16 +74,16 @@
                             <a href="#">查詢註冊表單</a>
                         </li>
                         <li>
-                            <a href="#">會員申訴聊天室</a>
-                            <ul>
+                            <a href="#" data-toggle="collapse" data-target="#collapseChat">會員申訴聊天室</a>
+                            <ul class="collapse" id="collapseChat">
                                 <li><a href="#">消費者聊天室</a></li>
                                 <li><a href="#">商家聊天室</a></li>
                                 <li><a href="#">外送員聊天室</a></li>
                             </ul>
                         </li>
                         <li>
-                            <a href="#">資料調閱</a>
-                            <ul>
+                            <a href="#" data-toggle="collapse" data-target="#collapseSearch">資料調閱</a>
+                            <ul class="collapse" id="collapseSearch">
                                 <li><a href="#">會員查詢</a></li>
                                 <li><a href="#">訂單查詢</a></li>
                                 <li><a href="#">報表查詢</a></li>
