--- a/admin_orderList.html
+++ b/admin_orderList.html
@@ -110,8 +110,8 @@
 
                         <p class="col-sm-6 pt-3">用餐人編號：<span>M00032</span></p>
                         <p class="col-sm-6 pt-3">是否為好友送餐：<span>是</span></p>
-                        <p class="col-sm-6 pt-3">餐點送達後聯絡人：<span>林瑋婷</span></p>
-                        <p class="col-sm-6 pt-3">餐點送達後聯絡人電話：<span>0910-555777</span></p>
+                        <p class="col-sm-6 pt-3">餐點送達聯絡人：<span>林瑋婷</span></p>
+                        <p class="col-sm-6 pt-3">餐點送達聯絡人電話：<span>0910-555777</span></p>
                         <p class="col-sm-12 pt-3">外送地點：<span>台北市中山區南京東路三段219號5樓</span></p>
                     </div>
                     <hr class="w-75" style="border: 1px solid #F3AD34;background-color: #F3AD34;">
