--- a/admin_login.html
+++ b/admin_login.html
@@ -34,7 +34,7 @@
     <link rel="stylesheet" href="./css/admin_login.css">
     <!-- JS檔 -->
     <script src="./js/admin_login.js"></script>
-    <title>後台管理登入</title>
+    <title>後台登入</title>
 </head>
 
 <body>
