--- a/admin_memberSearch.html
+++ b/admin_memberSearch.html
@@ -36,7 +36,7 @@
     <link rel="stylesheet" href="./css/admin_memberSearch.css">
     <!-- JS檔 -->
     <script src="./js/admin_memberSearch.js"></script>
-    <title>後臺管理訂單查詢</title>
+    <title>後台會員查詢</title>
 </head>
 
 <body>
