--- a/admin_orderList.html
+++ b/admin_orderList.html
@@ -36,7 +36,7 @@
     <link rel="stylesheet" href="./css/admin_orderList.css">
     <!-- JS檔 -->
     <script src="./js/admin_orderList.js"></script>
-    <title>後臺管理訂單明細</title>
+    <title>後台訂單明細</title>
 </head>
 
 <body>
