--- a/admin_reportInfo.html
+++ b/admin_reportInfo.html
@@ -35,10 +35,10 @@
     <!-- 載入chart.js相關JS -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <!-- CSS檔 -->
-    <link rel="stylesheet" href="./css/admin_reportTest.css">
+    <link rel="stylesheet" href="./css/admin_reportInfo.css">
     <!-- JS檔 -->
-    <script src="./js/admin_reportTest.js"></script>
-    <title>後臺管理報表測試</title>
+    <script src="./js/admin_reportInfo.js"></script>
+    <title>後臺報表資訊</title>
 </head>
 
 <body>
