--- a/admin_orderSearch.html
+++ b/admin_orderSearch.html
@@ -36,7 +36,7 @@
     <link rel="stylesheet" href="./css/admin_orderSearch.css">
     <!-- JS檔 -->
     <script src="./js/admin_orderSearch.js"></script>
-    <title>後臺管理訂單查詢</title>
+    <title>後台訂單查詢</title>
 </head>
 
 <body>
