--- a/admin_registerSearch.html
+++ b/admin_registerSearch.html
@@ -33,10 +33,10 @@
         integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
         crossorigin="anonymous"></script>
     <!-- CSS檔 -->
-    <link rel="stylesheet" href="./css/admin_signupSearch.css">
+    <link rel="stylesheet" href="./css/admin_registerSearch.css">
     <!-- JS檔 -->
-    <script src="./js/admin_signupSearch.js"></script>
-    <title>後臺管理訂單查詢</title>
+    <script src="./js/admin_registerSearch.js"></script>
+    <title>後台註冊表單查詢</title>
 </head>
 
 <body>
