--- a/admin_orderList.html
+++ b/admin_orderList.html
@@ -71,7 +71,7 @@
                 <div class="col-lg-2 aside">
                     <ul class="cart">
                         <li>
-                            <a href="#">查詢註冊表單</a>
+                            <a href="./admin_registerSearch.html">查詢註冊表單</a>
                         </li>
                         <li>
                             <a href="#" data-toggle="collapse" data-target="#collapseChat">會員申訴聊天室</a>
@@ -84,9 +84,9 @@
                         <li>
                             <a href="#" data-toggle="collapse" data-target="#collapseSearch">資料調閱</a>
                             <ul class="collapse" id="collapseSearch">
-                                <li><a href="#">會員查詢</a></li>
-                                <li><a href="#">訂單查詢</a></li>
-                                <li><a href="#">報表查詢</a></li>
+                                <li><a href="./admin_memberSearch.html">會員查詢</a></li>
+                                <li><a href="./admin_orderSearch.html">訂單查詢</a></li>
+                                <li><a href="./admin_reportSearch.html">報表查詢</a></li>
                             </ul>
                         </li>
                     </ul>
