--- a/admin_reportSearch.html
+++ b/admin_reportSearch.html
@@ -33,10 +33,10 @@
         integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
         crossorigin="anonymous"></script>
     <!-- CSS檔 -->
-    <link rel="stylesheet" href="./css/admin_orderSearch.css">
+    <link rel="stylesheet" href="./css/admin_reportSearch.css">
     <!-- JS檔 -->
-    <script src="./js/admin_orderSearch.js"></script>
-    <title>後台訂單查詢</title>
+    <script src="./js/admin_reportSearch.js"></script>
+    <title>後台報表查詢</title>
 </head>
 
 <body>
@@ -95,36 +95,13 @@
                 <main class="col-lg-10 main">
                     <!-- 查詢 -->
                     <div>
-                        <h1>訂單查詢</h1>
+                        <h1>報表查詢</h1>
                         <form>
                             <div class="form-inline">
                                 <div class="form-group col-md-6">
-                                    <label for="orderNum">訂單編號：</label>
-                                    <input type="text" class="form-control" id="orderNum">
-                                </div>
-                                <div class="form-group col-md-6">
-                                    <label for="orderState">訂單狀態：</label>
-                                    <select id="orderState" class="form-control">
-                                        <option selected>消費者送出訂單</option>
-                                        <option>店家接單</option>
-                                        <option>餐點已完成</option>
-                                        <option>通知外送員</option>
-                                        <option>外送員已接單</option>
-                                        <option>餐點到達通知取餐</option>
-                                        <option>待填寫評分</option>
-                                        <option>待填寫評論</option>
-                                        <option>訂單完成</option>
-                                        <option>消費者未取餐</option>
-                                        <option>取消訂單</option>
-                                    </select>
-                                </div>
-                            </div>
-                            <div class="form-inline mt-3">
-                                <div class="form-group col-md-6">
                                     <label for="memberType">會員類型：</label>
                                     <select id="memberType" class="form-control">
-                                        <option selected>消費者</option>
-                                        <option>商家</option>
+                                        <option selected>商家</option>
                                         <option>外送員</option>
                                     </select>
                                 </div>
@@ -135,22 +112,25 @@
                             </div>
                             <div class="form-inline mt-3">
                                 <div class="form-group col-md-6">
-                                    <label for="pickType">取單方式：</label>
-                                    <select id="pickType" class="form-control">
-                                        <option selected>外送</option>
-                                        <option>自取</option>
-                                    </select>
+                                    <label for="memberName">姓名：</label>
+                                    <input type="text" class="form-control" id="memberName">
+                                </div>
+                                <div class="form-group col-md-6">
+                                    <label for="vendorName">商家名稱：</label>
+                                    <input type="text" class="form-control" id="vendorName">
                                 </div>
                             </div>
                             <div class="form-inline mt-3">
                                 <div class="form-group col-md-10">
-                                    <label for="orderDate">訂單日期：</label>
-                                    <input type="date" class="form-control" id="orderDate" name="date1">
+                                    <label for="reportDate">報表區間：</label>
+                                    <input type="date" class="form-control" id="reportDate" name="date1">
                                     <span class="pl-3 pr-3"> ~ </span>
-                                    <input type="date" class="form-control" id="orderDate" name="date2">
+                                    <input type="date" class="form-control" id="reportDate" name="date2">
                                 </div>
                                 <button type="submit" class="col-md-1 btn btn-light btnsearch">查詢</button>
                             </div>
+
+
                         </form>
                         <hr style="border: 1px solid #DB7243;background-color: #DB7243;">
                     </div>
@@ -160,10 +140,10 @@
                             <div class="col-md-8">
                                 <select class="form-control">
                                     <option disabled selected hidden>排序方式</option>
-                                    <option>訂單編號遞增</option>
-                                    <option>訂單編號遞減</option>
-                                    <option>訂單金額遞增</option>
-                                    <option>訂單金額遞減</option>
+                                    <option>會員編號遞增</option>
+                                    <option>會員編號遞減</option>
+                                    <option>營收金額遞增</option>
+                                    <option>營收金額遞減</option>
                                 </select>
                             </div>
                             <div class="col-md-4">
@@ -187,114 +167,103 @@
                             <thead>
                                 <tr>
                                     <th scope="col">序號</th>
-                                    <th scope="col">訂單編號</th>
-                                    <th scope="col">訂單狀態</th>
-                                    <th scope="col">訂購人</th>
+                                    <th scope="col">會員編號</th>
+                                    <th scope="col">會員類型</th>
                                     <th scope="col">商家名稱</th>
-                                    <th scope="col">外送員</th>
-                                    <th scope="col">金額</th>
-                                    <th scope="col">明細</th>
+                                    <th scope="col">營收金額</th>
+                                    <th scope="col">日期</th>
+                                    <th scope="col">詳細</th>
                                 </tr>
                             </thead>
                             <tbody>
                                 <tr>
                                     <th scope="row">1</th>
-                                    <td>O00001</td>
-                                    <td>完成</td>
-                                    <td>李燦雯</td>
+                                    <td>V00001</td>
+                                    <td>商家</td>
                                     <td>麥當勞</td>
-                                    <td>陳邦月</td>
-                                    <td>298</td>
-                                    <td><a href="./admin_orderList.html"><i class="far fa-list-alt"></i></a></td>
+                                    <td>$100,000</td>
+                                    <td>2021/7/1-2021/7/31</td>
+                                    <td><a href="admin_reportInfo.html"><i class="far fa-list-alt"></i></a></td>
                                 </tr>
                                 <tr>
                                     <th scope="row">2</th>
-                                    <td>O00002</td>
-                                    <td>外送中</td>
-                                    <td>葉佩芸</td>
+                                    <td>V00002</td>
+                                    <td>商家</td>
                                     <td>摩斯</td>
-                                    <td>廖智鈞</td>
-                                    <td>350</td>
+                                    <td>$100,000</td>
+                                    <td>2021/7/1-2021/7/31</td>
                                     <td><a href="#"><i class="far fa-list-alt"></i></a></td>
                                 </tr>
                                 <tr>
                                     <th scope="row">3</th>
-                                    <td>O00003</td>
-                                    <td>已通知取餐</td>
-                                    <td>王聖文</td>
+                                    <td>V00003</td>
+                                    <td>商家</td>
                                     <td>肯德基</td>
-                                    <td>陳木福</td>
-                                    <td>199</td>
+                                    <td>$100,000</td>
+                                    <td>2021/7/1-2021/7/31</td>
                                     <td><a href="#"><i class="far fa-list-alt"></i></a></td>
                                 </tr>
                                 <tr>
                                     <th scope="row">4</th>
-                                    <td>O00004</td>
-                                    <td>商家接單</td>
-                                    <td>白怡芬</td>
+                                    <td>V00004</td>
+                                    <td>商家</td>
                                     <td>漢堡王</td>
-                                    <td>吳靜琦</td>
-                                    <td>115</td>
+                                    <td>$100,000</td>
+                                    <td>2021/7/1-2021/7/31</td>
                                     <td><a href="#"><i class="far fa-list-alt"></i></a></td>
                                 </tr>
                                 <tr>
                                     <th scope="row">5</th>
-                                    <td>O00005</td>
-                                    <td>已通知取餐</td>
-                                    <td>周敬真</td>
+                                    <td>V00005</td>
+                                    <td>商家</td>
                                     <td>21世紀</td>
-                                    <td>林韋龍</td>
-                                    <td>409</td>
+                                    <td>$100,000</td>
+                                    <td>2021/7/1-2021/7/31</td>
                                     <td><a href="#"><i class="far fa-list-alt"></i></a></td>
                                 </tr>
                                 <tr>
                                     <th scope="row">6</th>
-                                    <td>O00006</td>
-                                    <td>完成</td>
-                                    <td>汪佳瑩</td>
+                                    <td>V00006</td>
+                                    <td>商家</td>
                                     <td>胖老爹</td>
-                                    <td>劉紫良</td>
-                                    <td>598</td>
+                                    <td>$100,000</td>
+                                    <td>2021/7/1-2021/7/31</td>
                                     <td><a href="#"><i class="far fa-list-alt"></i></a></td>
                                 </tr>
                                 <tr>
                                     <th scope="row">7</th>
-                                    <td>O00007</td>
-                                    <td>外送中</td>
-                                    <td>陳旻恩</td>
+                                    <td>V00007</td>
+                                    <td>商家</td>
                                     <td>五十嵐</td>
-                                    <td>吳美仁</td>
-                                    <td>80</td>
+                                    <td>$100,000</td>
+                                    <td>2021/7/1-2021/7/31</td>
                                     <td><a href="#"><i class="far fa-list-alt"></i></a></td>
                                 </tr>
                                 <tr>
                                     <th scope="row">8</th>
-                                    <td>O00008</td>
-                                    <td>商家接單</td>
-                                    <td>葉怡剛</td>
+                                    <td>V00008</td>
+                                    <td>商家</td>
                                     <td>起家雞</td>
-                                    <td>張佳蘋</td>
-                                    <td>429</td>
+                                    <td>$100,000</td>
+                                    <td>2021/7/1-2021/7/31</td>
                                     <td><a href="#"><i class="far fa-list-alt"></i></a></td>
                                 </tr>
                                 <tr>
                                     <th scope="row">9</th>
-                                    <td>O00009</td>
-                                    <td>外送中</td>
-                                    <td>楊志明</td>
+                                    <td>V00009</td>
+                                    <td>商家</td>
                                     <td>吉野家</td>
-                                    <td>林山凌</td>
-                                    <td>159</td>
+                                    <td>$100,000</td>
+                                    <td>2021/7/1-2021/7/31</td>
                                     <td><a href="#"><i class="far fa-list-alt"></i></a></td>
                                 </tr>
                                 <tr>
                                     <th scope="row">10</th>
-                                    <td>O00010</td>
-                                    <td>消費者送出訂單</td>
-                                    <td>夏康欣</td>
+                                    <td>V00010</td>
+                                    <td>商家</td>
                                     <td>鬍鬚張</td>
-                                    <td>陳淑君</td>
-                                    <td>220</td>
+                                    <td>$100,000</td>
+                                    <td>2021/7/1-2021/7/31</td>
                                     <td><a href="#"><i class="far fa-list-alt"></i></a></td>
                                 </tr>
                             </tbody>
@@ -309,6 +278,9 @@
                 <p class="text-center">&copy; 2021 All Rights Reserved. 版權所有 不得轉載</p>
             </div>
         </footer>
+
+
+
 </body>
 
 </html>
