--- a/admin_chatRoom.html
+++ b/admin_chatRoom.html
@@ -8,17 +8,19 @@
     <!-- 頁籤小icon -->
     <link rel="icon shortcut" href="./img/favicon.ico">
     <!-- google Noto Sans TC 字型 -->
-
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100&display=swap" rel="stylesheet">
     <script data-search-pseudo-elements defer
         src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/js/all.min.js" crossorigin="anonymous"></script>
+    <!-- Font Awesome -->
+    <script data-search-pseudo-elements defer
+        src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/js/all.min.js" crossorigin="anonymous"></script>
+    <!-- 載入jQuery相關JS -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <!-- 載入Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
         integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-
-
     <!-- 載入Bootstrap相關JS -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
@@ -31,9 +33,10 @@
         integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
         crossorigin="anonymous"></script>
     <!-- CSS檔 -->
-    <link rel="stylesheet" href="./css/admin_login.css">
-
-    <title>後台登入</title>
+    <link rel="stylesheet" href="./css/admin_chatRoom.css">
+    <!-- JS檔 -->
+    <script src="./js/admin_chatRoom.js"></script>
+    <title>後台聊天室</title>
 </head>
 
 <body>
@@ -56,53 +59,58 @@
             <div class="collapse navbar-collapse" id="collapsibleNavId">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">美食地圖</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">廠商專區</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">消費者專區</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">外送員專區</a>
+                        <button type="button" class="btn btn-outline-warning btnsignup">登出</button>
                     </li>
                 </ul>
-
-
             </div>
-
         </nav>
         <!-- navbar end -->
-        <!-- 登入區 -->
-        <section>
-            <form>
-                <div class="form-group pt-3">
-                    <p class="title pb-4">系統管理員</p>
-                    <label class="pb-3" for="exampleInputEmail1">帳號：</label>
-                    <input type="email" class="form-control" id="email1" aria-describedby="emailHelp"
-                        placeholder="Email" required>
+        <!-- section -->
+        <section class="container">
+            <div class="row align-items-start">
+                <!--左選單 -->
+                <div class="col-lg-2 aside">
+                    <ul class="cart">
+                        <li>
+                            <a href="./admin_registerSearch.html">查詢註冊表單</a>
+                        </li>
+                        <li>
+                            <a href="#" data-toggle="collapse" data-target="#collapseChat">會員申訴聊天室</a>
+                            <ul class="collapse" id="collapseChat">
+                                <li><a href="#">消費者聊天室</a></li>
+                                <li><a href="#">商家聊天室</a></li>
+                                <li><a href="#">外送員聊天室</a></li>
+                            </ul>
+                        </li>
+                        <li>
+                            <a href="#" data-toggle="collapse" data-target="#collapseSearch">資料調閱</a>
+                            <ul class="collapse" id="collapseSearch">
+                                <li><a href="./admin_memberSearch.html">會員查詢</a></li>
+                                <li><a href="./admin_orderSearch.html">訂單查詢</a></li>
+                                <li><a href="./admin_reportSearch.html">報表查詢</a></li>
+                            </ul>
+                        </li>
+                    </ul>
                 </div>
-                <div class="form-group">
-                    <label class="pb-3" for="exampleInputPassword1">密碼：</label>
-                    <input type="password" class="form-control" id="password1" placeholder="Password" required>
-                </div>
-                <div class="pb-3" style="text-align:center">
-                    <button type="submit" class="btn btn-secondary btn-lg mt-5 signinbtn" id="submit">登入</button>
-                </div>
+                <!--聊天室-->
+                <!-- 聊天欄 -->
+                <div class="col-lg-3 A">
 
-            </form>
+                </div>
+                <!-- 聊天內容 -->
+                <div class="col-lg-7 B">
+
+                </div>
+            </div>
         </section>
+        <!-- section end-->
         <!-- footer -->
-        <footer id="footer" class="text-white">
+        <footer id=" footer" class="text-white">
             <div class="footer-end bg-dark mt-4 py-2">
                 <p class="text-center">&copy; 2021 All Rights Reserved. 版權所有 不得轉載</p>
             </div>
         </footer>
-
-    </div>
-    <!-- JS檔 -->
-    <script src="./js/admin_login.js"></script>
+        <!-- footer end-->
 </body>
 
 </html>
