--- a/admin_index.html
+++ b/admin_index.html
@@ -140,12 +140,12 @@
                                             <td>
                                                 <FORM METHOD="post" ACTION="">
                                                     <input type="submit" class="btn btn-sm btn-outline-secondary"
-                                                        value="修改密碼">
+                                                        value="修改密碼" disabled>
                                             </td>
                                             <td>
                                                 <FORM METHOD="post" ACTION="">
                                                     <input type="submit" class="btn btn-sm btn-outline-danger"
-                                                        value="刪除">
+                                                        value="刪除" disabled>
                                             </td>
                                         </tr>
                                     </tbody>
